samples/_failures_safe/1761316900_bede36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e42a54cf.c: In function ‘main’:
./samples/SAFE/__tmp_e42a54cf.c:145:35: error: expected ‘)’ at end of input
  145 |     if (graph_add_edge(&g, b, c, 1
      |                       ~           ^
      |                                   )
./samples/SAFE/__tmp_e42a54cf.c:145:5: error: expected declaration or statement at end of input
  145 |     if (graph_add_edge(&g, b, c, 1
      |     ^~
